--- a/app.html
+++ b/app.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Burgueria</h1>
 
-    <script type="module" src="srcipts/app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
